outputs_20260331-211012-d2135dce/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Pwm.h:6,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\src\egtm_atom_3_phase_inverter_pwm.c:16:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm.h:11:5: error: expected specifier-qualifier-list before 'unsitypedef'
   11 |     unsitypedef struct
      |     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm.h:33:30: error: expected ',' or '}' before 'enum'
   33 |     IfxEgtm_Cfg_MscSetypedef enum
      |                              ^~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Pwm.h:7:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Cmu.h:61:1: error: '/*' within comment [-Werror=comment]
   61 | /* Functions to mock (mandatory set) */
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Pwm.h:61:29: error: invalid suffix 'typedef' on integer constant
   61 | } IfxEgtm_Pwm_ChannelState; 1typedef enum
      |                             ^~~~~~~~
cc1.exe: all warnings being treated as errors

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:3:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm.h:11:5: error: expected specifier-qualifier-list before 'unsitypedef'
   11 |     unsitypedef struct
      |     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm.h:33:30: error: expected ',' or '}' before 'enum'
   33 |     IfxEgtm_Cfg_MscSetypedef enum
      |                              ^~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:4:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Cmu.h:61:1: error: '/*' within comment [-Werror=comment]
   61 | /* Functions to mock (mandatory set) */
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Pwm.h:7,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\mocks\mock_egtm_atom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Cmu.h:61:1: error: '/*' within comment [-Werror=comment]
   61 | /* Functions to mock (mandatory set) */
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_sv6sreyn\include/IfxEgtm_Pwm.h:61:29: error: invalid suffix 'typedef' on integer constant
   61 | } IfxEgtm_Pwm_ChannelState; 1typedef enum
      |                             ^~~~~~~~
cc1.exe: all warnings being treated as errors
